# se-toolkit-lab-8

./: .env.docker.example  .gitignore  REPORT.md  docker-compose.yml  pyproject.toml  server.js
llm-proxy/: Dockerfile
mcp/mcp-obs/: pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __main__.py  client.py  models.py  server.py  settings.py  tools.py
nanobot/: Dockerfile  README.md  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
