[project]
name = "nanobot"
version = "0.1.0"
description = "Custom HKUDS/nanobot setup"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "pydantic",
    "pydantic-settings",
    "opentelemetry-distro[otlp]>=0.61b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.40.0",
    "opentelemetry-instrumentation-logging>=0.61b0",
    
    "mcp-lms",
    
    "mcp-webchat",
    "nanobot-webchat",
    
    # Task 3 — uncomment after you add mcp-obs.
    "mcp-obs",
]
